compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__equivalence_of_subprogram_formals_err_too_many.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "type t_p : procedure(a, b : int, var c : string)\nprocedure p(a, b, k : int, var c : string) end p\n\nvar _ : t_p := p\n"
---
"t_p"@(FileId(1), 5..8) [Type]: alias[DefId(PackageId(0), LocalDefId(0))] of procedure ( pass(value) int, pass(value) int, pass(var ref) string, ) -> void
"a"@(FileId(1), 21..22) [Param(Value, No)]: <error>
"b"@(FileId(1), 24..25) [Param(Value, No)]: <error>
"c"@(FileId(1), 37..38) [Param(Reference(Var), No)]: <error>
"p"@(FileId(1), 59..60) [Subprogram(Procedure)]: procedure ( pass(value) int, pass(value) int, pass(value) int, pass(var ref) string, ) -> void
"a"@(FileId(1), 61..62) [Param(Value, No)]: int
"b"@(FileId(1), 64..65) [Param(Value, No)]: int
"k"@(FileId(1), 67..68) [Param(Value, No)]: int
"c"@(FileId(1), 80..81) [Param(Reference(Var), No)]: string
"_"@(FileId(1), 103..104) [ConstVar(Var, No)]: alias[DefId(PackageId(0), LocalDefId(0))] of procedure ( pass(value) int, pass(value) int, pass(var ref) string, ) -> void
"<unnamed>"@(dummy) [Undeclared]: <error>
"<unnamed>"@(dummy) [Undeclared]: <error>
"<root>"@(dummy) [Module(No)]: <error>

error at (FileId(1), 114..115): mismatched types
| note for (FileId(1), 114..115): this is of type `procedure (int, int, int, var : string)`
| note for (FileId(1), 107..110): this is of type `t_p (alias of procedure (int, int, var : string))`
| info: `procedure (int, int, int, var : string)` is not assignable into `procedure (int, int, var : string)`
