compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__integer_inference_exp.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "\n    % Inferred integer types should pass\n    % Decl should be a concrete type\n    var a := 1 ** 1\n    % Types of operands should make the type concrete\n    var r : real\n    var i : int\n    var n : nat\n    var _r0 := 1 ** r\n    var _r1 := r ** 1\n    var _i0 := 1 ** i\n    var _i1 := i ** 1\n    var _n0 := 1 ** n\n    var _n1 := n ** 1\n"
---
"a"@(FileId(1), 87..88) [ConstVar(Var, No)]: int
"r"@(FileId(1), 161..162) [ConstVar(Var, No)]: real
"i"@(FileId(1), 178..179) [ConstVar(Var, No)]: int
"n"@(FileId(1), 194..195) [ConstVar(Var, No)]: nat
"_r0"@(FileId(1), 210..213) [ConstVar(Var, No)]: real
"_r1"@(FileId(1), 232..235) [ConstVar(Var, No)]: real
"_i0"@(FileId(1), 254..257) [ConstVar(Var, No)]: int
"_i1"@(FileId(1), 276..279) [ConstVar(Var, No)]: int
"_n0"@(FileId(1), 298..301) [ConstVar(Var, No)]: nat
"_n1"@(FileId(1), 320..323) [ConstVar(Var, No)]: nat
"<root>"@(dummy) [Module(No)]: <error>

